[package]
name = "wasteland"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "wasteland"
path = "src/main.rs"

[[example]]
name = "2d_shapes"
path = "examples/2d_shapes.rs"


[[example]]
name = "start"
path = "examples/start.rs"

[dependencies]
argh = "0.1.13"
bevy = { version = "0.16.0", features = ["dynamic_linking"] }
rand = "0.9.1"
ron = "0.10.1"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }

[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=/usr/bin/mold"]
